<resources>
    <string name="app_name">NotiPushUPIIZ</string>
    <string name="notipush">NotiPush</string>
    <string name="ingrese_su_boleta">Ingrese su boleta</string>
    <string name="logo">logo</string>
    <string name="seleccionar">Seleccionar si es alumno o PAAE</string>
    <string name="continuar">CONTINUAR</string>
    <string name="title_activity_menu_app">MenuApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="salir">Salir</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="boleta">boleta</string>
    <string name="nombre">nombre</string>
    <string name="textview">TextView</string>
    <string name="grupo">Grupo:</string>
    <string name="titulo">Titulo:</string>
    <string name="fecha">Fecha:</string>
    <string name="imagen">imagen</string>
    <string name="regresar">Regresar</string>
</resources>